# TestWeave

./: .env.example  .gitignore  .prettierignore  LICENSE  Makefile  README.md  compose.yaml  eslint.config.js  package-lock.json  package.json
apps/server/: alembic.ini  pyproject.toml
apps/server/src/testweave/: __init__.py  cli.py  init_e2e_data.py  main.py
apps/server/tests/: conftest.py  test_ai_capability.py  test_ai_capability_p2_runtime.py  test_ai_capability_p3_canonical_json.py  test_ai_capability_p3_e2e.py  test_ai_capability_p3_revision.py  test_ai_capability_p5_domain.py  test_ai_capability_p5_eval_package.py  test_ai_capability_p5_release.py  test_ai_test_design_workbench.py  test_attachments.py  test_auth_logic.py  test_config.py  test_crypto.py  test_database_safety.py  test_errors.py  test_executions_service.py  test_external_artifact_p2a.py  test_external_candidate_p2b.py  test_external_candidate_workbench_bridge.py  test_external_cli_mcp_p3.py  test_external_draft_p4.py  test_external_gateway_p0.py  test_external_idempotency.py  test_external_tasks_requirements.py  test_external_workbench_handshake.py  test_external_workspace_p1.py  test_external_workspace_runner.py  test_git_client.py  test_health.py  test_migration_metadata.py  test_requirements.py  test_session.py  test_sync_job.py  test_test_cases.py  test_test_tasks.py  test_versions.py  test_workbench_service.py
apps/server/tests/integration/: conftest.py  test_ai_capability_integration_p2.py  test_ai_capability_p5_e2e.py  test_attachments_api.py  test_business_integration.py  (+9 more)
(+240 files in other folders)
