[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "testweave-server"
version = "0.1.0"
description = "TestWeave platform API"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
  "sqlalchemy>=2.0.40,<3",
  "structlog>=25.2,<26",
  "uvicorn[standard]>=0.34,<1",
  "argon2-cffi>=23.1,<24",
  "python-multipart>=0.0.18,<1",
  "cryptography>=44.0,<45",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6.1,<7",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/testweave"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: requires a disposable PostgreSQL database via TESTWEAVE_TEST_DATABASE_URL",
]

[tool.coverage.run]
branch = true
source = ["testweave"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003", "B008"]
allowed-confusables = ["，"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["testweave"]
